# pys4

./: .gitignore  Dockerfile  Makefile  README.md  environment.yml  justfile  log.txt  meson.build  meson.options  pyproject.toml  setup.py
.github/workflows/: test-conda.yml  test.yml
doc/: Makefile  conf.py  dev_info.rst  index.rst  install.rst  justfile  license.rst  requirements.txt  sg_execution_times.rst  tutorial.rst
doc/_static/: custom.css  custom_gallery.css
examples/: README.rst
examples/Li_JOSA_14_2758_1997/: README.rst  plot_example1.py  plot_example2.py  plot_example3.py
examples/Sakaguchi_OptComm_162_64_1999/: README.rst  plot_table1m2g2.py
examples/Suh_APL_82_1999_2003/: README.rst  plot_fig2a.py  plot_fig2b.py
examples/Tikhodeev_PRB_66_45102_2002/: README.rst  plot_fig4.py
examples/interpolator/: plot_interpolator.py
examples/rod_array/: cylinder_array.py  test
examples/simple/: README.rst  plot_simple.py
pys4/: __about__.py  __init__.py  core.py
pys4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/pys4/: __about__.py  __init__.py  _core.py  core.py  meson.build
src/: Makefile  README.md  gensetup.py.sh  meson.build  pyproject.toml
src/S4/: Makefile  gensetup.py.sh  main_python.c  meson.build
src/S4/RNP/: meson.build
src/S4/S4/: main_python.c  meson.build
src/S4/S4/kiss_fft/: meson.build
src/S4/fmm/: meson.build
src/S4/kiss_fft/tools/: meson.build
src/S4/pattern/: intersection.h  meson.build  pattern.c
src/pys4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pys4a.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: requirements.txt  test_api.py  test_package.py  test_simple.py
