[build-system]
build-backend = 'mesonpy'
requires = ['meson-python>=0.14',"numpy>=1.22"]

[project]
name = "pys4"
version = "0.0.1"
description = "Python frontend for S4"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["photonics"]
authors = [{ email = "contact@pys4.io" }, { name = "The pys4 Developers" }]
classifiers = [
  "Development Status :: 5 - Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities",
]
dependencies = ["numpy>=1.22","matplotlib"]

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["pys4"]


[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-sugar",
  "pytest-xdist[psutil]",
  "coverage",
]
doc = [
  "MarkupSafe",
  "Sphinx",
  "furo",
  "sphinx-gallery",
  "sphinx-copybutton",
  "memory_profiler",
  "sphinx-autoapi",
]
dev = ["ruff", "meson-python", "ninja"]
all = ["pys4[test,doc,dev]"]

# [tool.meson-python.args]
# setup = ['--default-library=static']

[tool.pytest.ini_options]
addopts = "test --cov=pys4 --cov-report html --cov-report term"




# [tool.ruff]
# # Set the maximum line length to 79.
# line-length = 79

# [tool.ruff.lint]
# extend-select = [
#   "E501", #line-too-long
#   "UP", # pyupgrade
#   "D", # pydocstyle

# ]
# ignore = ["D206"]

# [tool.ruff.lint.pydocstyle]
# convention = "numpy"

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "tab"
# docstring-code-format = true



# # [tool.cibuildwheel]
# # before-all = "yum -y install boost-devel openblas-devel fftw3-devel suitesparse-devel"