[build-system]
requires = ["setuptools>=61", "wheel", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "S4"
version = "1.1"
description = "Stanford Stratified Structure Solver (S4): Fourier Modal Method"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "COPYRIGHT" }
keywords = ["photonics"]
authors = [{ email = "victorliu@alumni.stanford.edu" }, { name = "Victor Liu" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities",
]
dependencies = ["importlib_metadata; python_version<'3.8'", "numpy>=1.20.0"]

[tool.setuptools]
packages = ["S4"]

[project.urls]
homepage = "http://fan.group.stanford.edu/S4/o"
code = "https://github.com/victorliu/S4"
issues = "https://github.com/victorliu/S4/issues"
